--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,11 @@ a {
   margin-right: 20px;
 }
 
+.mode {
+  display: flex;
+  align-items: center;
+}
+
 .cardsApp {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
